--- a/index.html
+++ b/index.html
@@ -2,67 +2,92 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Personal Site</title>
+        <title>CV</title>
     </head>
     <body>
-        <table cellspacing="30">
+        <table cellspacing="20">
             <tr>
                 <td><img src="https://sun9-north.userapi.com/sun9-77/s/v1/ig2/HtId1Skgq0apseN3LjjbmtMyeiUTFVNoNd2jEp9zmnyT8z9G2fdHD0JhSs08dMQvzhm84SQPIDxBoCR2DecfD95M.jpg?size=200x200&quality=96&crop=474,2,1703,1703&ava=1" alt="Alex Kulikov"></td>
-                <td><h1>Alexey Kulikov</h1>
-                    <p><em>Project Manager</em></p>
-                    <p><a href="https://nizhniy.1cbit.ru/">First Bit</a></p>
+                <td> <center><h1>Алексей Куликов</h1>
+                    <p><em>11.08.1988, 33 года</em></p>
+                    <p><em>+7 (960) 177-99-99</em></p>
+                    <p><em>kulikovtestcv@gmail.com</em></p>
+                    <p><a href="contact.html">Contact me</a></p>
+                </center>
                 </td>
             </tr>
         </table>
-        <h3>Work Experience</h3>
+        <hr>
+        <h3>О себе:</h3>
+        <p>Помогаю компаниям автоматизировать свой бизнес, увеличить продажи и не терять клиентов. <br>
+            Минимизирую расходы бизнеса путем автоматизации ежедневных рутинных операций. <br>
+            Люблю общаться с людьми, считаю, что грамотная коммуникация - залог успеха в любом деле. <br>
+            Умею выделять самое важное и сосредотачиваться на этом. <br>
+            Не боюсь принимать решения и нести за них ответственность.</p>
+        <hr>
+
+        <h3>Опыт работы:</h3>
 
         <table border="1">
-            <thead>
-                <tr>
-                    <th>Years</th>
-                    <th>Work</th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
-                <td>2021-2022</td>
-                <td>Project Manager at First Bit</td>
-            </tr>
-            <tr>
-                <td>2020-2021</td>
-                <td>Sales Manager at Tyrolit</td>
-            </tr>
+                    <td>Май 2021 — по настоящее время</td>
+                    <td><a href="https://www.1cbit.ru/">Первый БИТ</a>
+                        <h4>Руководитель IT проектов</h4>
+                        <p>Руковожу проектами по внедрению Битрикс24 в компаниях разного масштаба (от 20 до 3000 сотрудников) <br>
+                        Руковожу группой (5 чел.) аналитиков, внедренцев и разработчиков, распределяю задачи в команде, <br>
+                        разрабатываю план-графики проектов, контролирую их выполнение, а также выполняю роль наставника.<br>
+                        Составляю и контролирую выполнение индивидуальных планов развития команды</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Август 2020 — май 2021</td>
+                    <td><a href="https://www.tyrolit.com//">Tyrolit</a>
+                        <h4>Менеджер проекта</h4>
+                        <p>- Построил отдел продаж с нуля;<br>
+                            - Внедрил в компанию CRM систему Bitrix24;<br>
+                            - Расширил географию присутствия на рынке в городах: Липецк и Санкт-Петербург;<br>
+                            - Увеличил долю поставляемой продукции на стратегическом предприятии до 100%. <br>
+                            Ранее этот показатель составлял 70%;<br>
+                            - Привел в компанию трех крупных клиентов со средним годовым чеком 20000 евро<br>
+                            - Развил партнерские отношения с производителем Tyrolit, добился особых условий поставки<br>
+                            продукции для проведения испытаний абразивного инструмента<br>
+                            - Планирование, контроль, обучение менеджеров по продажам.</p>
 
+                    </td>
+                </tr>
             </tbody>
-            <tfoot>
-
-            </tfoot>
-
         </table>
+
         <hr>
-        <a href="contact.html">Contact me</a>
-        <hr>
-        <h3>Skills</h3>
+        <h3>Навыки</h3>
         <table cellspacing="10">
             <tr>
-                <td>Bitrix</td>
-                <td>✨✨✨✨✨</td>
-                <td>Negotiations</td>
-                <td>✨✨✨✨✨</td>
-            </tr>
-            <tr>
-                <td>Management</td>
+                <td>Управление проектами</td>
                 <td>✨✨✨✨</td>
-                <td>Technology</td>
+                <td>Лидерство</td>
                 <td>✨✨✨✨</td>
             </tr>
             <tr>
-                <td>Leader</td>
+                <td>Коммуникация</td>
+                <td>✨✨✨✨✨</td>
+                <td>Мотивация персонала</td>
+                <td>✨✨✨✨✨</td>
+            </tr>
+            <tr>
+                <td>Ведение переговоров</td>
                 <td>✨✨✨✨</td>
-                <td>Hiring</td>
+                <td>Проведение презентаций</td>
+                <td>✨✨✨✨✨</td>
+            </tr>
+            <tr>
+                <td>Оптимизация бизнес-процессов</td>
+                <td>✨✨✨✨✨</td>
+                <td>Работа в команде</td>
                 <td>✨✨✨✨✨</td>
             </tr>
         </table>
 
+        <hr>
     </body>
 </html>
