--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,12 @@
         <title>Contacts</title>
     </head>
     <body>
-        <dl>
-            <dt>Coffee</dt>
-            <dd>- black hot drink</dd>
-            <dt>Milk</dt>
-            <dd>- white cold drink</dd>
-        </dl>
-        <hr>
         <form class="" action="mailto:kulikov2531@gmail.com" method="post" enctype="text/plain">
-            <label>Your Name:</label>
+            <label>Ваше имя:</label>
             <input type="text" name="" value=""><br>
-            <label>Your Email:</label>
+            <label>Ваш Email:</label>
             <input type="email" name="" value=""><br>
-            <label>Your Message:</label><br>
+            <label>Ваше сообщение:</label><br>
             <textarea name="name" rows="10" cols="30"></textarea><br>
             <input type="submit" name="">
 
