--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>CV</title>
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
         <table cellspacing="20">
@@ -12,7 +14,7 @@
                     <p><em>11.08.1988, 33 года</em></p>
                     <p><em>+7 (960) 177-99-99</em></p>
                     <p><em>kulikovtestcv@gmail.com</em></p>
-                    <p><a href="contact.html">Contact me</a></p>
+                    <p class="link"><a href="contact.html">Свяжитесь со мной</a></p>
                 </center>
                 </td>
             </tr>
