--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Contacts</title>
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
+        <h1>Свяжитесь со мной</h1>
         <form class="" action="mailto:kulikov2531@gmail.com" method="post" enctype="text/plain">
             <label>Ваше имя:</label>
-            <input type="text" name="" value=""><br>
+            <label>
+                <input type="text" name="" value="">
+            </label><br>
             <label>Ваш Email:</label>
-            <input type="email" name="" value=""><br>
+            <label>
+                <input type="email" name="" value="">
+            </label><br>
             <label>Ваше сообщение:</label><br>
-            <textarea name="name" rows="10" cols="30"></textarea><br>
+            <label>
+                <textarea name="name" rows="10" cols="30"></textarea>
+            </label><br>
             <input type="submit" name="">
 
         </form>
